# ashengine

./: .gitignore  LICENSE
docs/: README.md
engine/: Cargo.toml  build.rs  compile_shaders.sh
engine/config/: engine.toml
engine/shaders/: particle_update.comp  text.frag  text_picking.comp  vert.vert
engine/shaders/spv/: text.frag.spv  text.vert.spv
engine/src/: error.rs  lib.rs  main.rs
engine/src/config/: loader.rs  mod.rs  text_blocks.rs
engine/src/ecs/: mod.rs  query.rs  world.rs
engine/src/ecs/component/: mod.rs  physics.rs  render.rs  renderer.rs  transform.rs
engine/src/ecs/system/: mod.rs  physics_bridge.rs  render_system.rs
engine/src/graphics/: archetypes.rs  command.rs  command_buffer.rs  context.rs  mod.rs  pipeline.rs  render_pass.rs  renderer.rs  shader.rs  swapchain.rs
engine/src/graphics/pipeline/: cache.rs  config.rs  layout.rs  mod.rs  state.rs  variants.rs
engine/src/graphics/render/: graph.rs  mod.rs  pass.rs  pipeline.rs
engine/src/graphics/resource/: buffer.rs  material.rs  mesh.rs  mod.rs  shader.rs  texture.rs
engine/src/lighting/: lighting.rs  mod.rs
engine/src/log_error/: context.rs  error.rs  formatters.rs  mod.rs
engine/src/log_error/handlers/: file.rs  mod.rs
engine/src/memory/: buffer.rs  error.rs  logging.rs  mod.rs
engine/src/physics/: collision.rs  constraints.rs  debug.rs  gpu_physics.rs  logging.rs  memory.rs  mod.rs  physics.rs  solver.rs  spatial.rs
engine/src/physics/shaders/: mod.rs  particle_update.comp
engine/src/text/: atlas.rs  font.rs  layout.rs  mod.rs  picking.rs  vertex.rs
(+42 files in other folders)
